--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   width: 100vw;
   height: 100vh;
   overflow-y: auto;
+  background-color: linear-gradient(
+    81deg,
+    #e7f0ff 9.01%,
+    rgba(232, 241, 255, 0.47) 89.11%
+  );
 }
 
 .App::-webkit-scrollbar {
