--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+button {
+  border: none;
+  outline: none;
+}
