--- a/src/components/FooterSection/FooterSection.css
+++ b/src/components/FooterSection/FooterSection.css
@@ -25,10 +25,11 @@
 .social-media-links-container {
   display: flex;
   gap: 20px;
+  justify-content: space-between;
 }
 
 .medify-info-section {
-  width: 231px;
+  height: 226px;
   display: flex;
   flex-direction: column;
   color: #ffffff; /* rgba(255, 255, 255, 1) */
@@ -39,6 +40,8 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
+  flex-wrap: wrap;
+  column-gap: 30px;
 }
 
 .info-text {
