--- a/src/components/Appointments/Appointments.css
+++ b/src/components/Appointments/Appointments.css
@@ -98,3 +98,32 @@
   justify-content: center;
   align-items: center;
 }
+.swiper-button-next,
+.swiper-button-prev {
+  background-color: white;
+  background-position: center;
+  background-size: 20px;
+  background-repeat: no-repeat;
+  padding: 23px;
+  border-radius: 100%;
+  border: 1px solid #e0e0e4;
+  color: #2aa7ff;
+}
+
+.swiper-button-next {
+  background-image: url("../../assets/LeftArrow.png");
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+}
+
+.swiper-button-prev {
+  background-image: url("../../assets/RightArrow.png");
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+}
+
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  content: "";
+  border: none;
+}
